<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/activity_review_grade"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:src="@drawable/ic_15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#dcdcdc" />

    <RatingBar
        android:id="@+id/activity_review_rating"
        style="?android:attr/ratingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/plz_input"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/activity_contents_input"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:gravity="top"
        android:hint="@string/review_guide"
        android:maxLength="100"
        android:padding="10dp"
        android:textCursorDrawable="@color/design_default_color_primary_dark"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_review_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/activity_review_finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>