<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 영화소개 레이아웃-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/fragment_movie_detail_poster"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/image11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_title"
                        android:textColor="@color/white"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/fragment_detail_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:src="@drawable/ic_15" />

                </LinearLayout>


                <TextView
                    android:id="@+id/fragment_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/default_date"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_genre_time"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <Button
                        android:id="@+id/likeButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/thumb_up"
                        app:backgroundTint="?android:attr/panelBackground"
                        app:backgroundTintMode="add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/fragment_detail_likeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="15"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/likeButton"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/dislikeButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/thumb_down"
                        app:backgroundTint="?android:attr/panelBackground"
                        app:backgroundTintMode="add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_detail_likeCount"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/fragment_detail_dislikeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/dislikeButton"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>
        <!-- 영화소개 레이아웃 끝 -->


        <!-- 예매율, 평점, 누적관객수 레이아웃 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#dcdcdc"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/advance_rate"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_detail_ranking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/default_ranking"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_reservation_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/default_adv_rate"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/grade"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/fragment_detail_user_rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:rating="4.5"
                        android:stepSize="0.1"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/fragment_detail_audience_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/default_grade"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/acc_audience"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_detail_audience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/default_acc_audience"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
        <!-- 예매율, 평점, 누적관객수 레이아웃  끝-->


        <!-- 줄거리 레이아웃 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/summary"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_detail_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:text="@string/data"
                android:textSize="16dp" />

        </LinearLayout>
        <!-- 줄거리 레이아웃 끝-->

        <!-- 감독 출연 레이아웃-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#dcdcdc"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/director"
                        android:textSize="16dp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/fragment_detail_director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/default_director"
                        android:textSize="16dp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/cast"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/fragment_detail_actor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/default_cast"
                        android:textSize="16dp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- 한줄평 레이아웃 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/review"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/writeOneLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_review_selected"
                android:text="@string/write"
                android:textColor="#FF5722"
                android:textSize="18dp"
                android:textStyle="bold"
                app:backgroundTint="?android:attr/panelBackground"
                app:backgroundTintMode="add" />

        </RelativeLayout>
        <!-- 한줄평 레이아웃 끝-->

        <!-- 한줄평 목록 레이아웃 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <Button
                android:id="@+id/allReviewBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="모두 보기" />
        </LinearLayout>
        <!-- 한줄평 목록 레이아웃 끝 -->

    </LinearLayout>

</ScrollView>