<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/fragment_poster_image"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/fragment_poster_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/default_title"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fragment_poster_image" />

    <View
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:background="@drawable/home_slider1"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_poster_title" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/detailButton"
        app:layout_constraintTop_toBottomOf="@+id/fragment_poster_title">

        <TextView
            android:id="@+id/fragment_poster_reservation_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/list_rate"
            android:textColor="#ffffff"
            android:textSize="15sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="13dp"
            android:layout_marginRight="10dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/fragment_poster_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/list_level"
            android:textColor="#ffffff"
            android:textSize="15sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/detailButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/detail_button"
        android:text="@string/detail"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:backgroundTint="?android:attr/panelBackground"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />
</androidx.constraintlayout.widget.ConstraintLayout>